# elliot-cli

./: .gitignore  AGENTS.md  README.md  eval.yaml  pyproject.toml  requirements-that-works-for-nam.txt  requirements-venv-evalchemy.txt  requirements-venv-ufal.txt  requirements-venv.txt
.github/workflows/: ci.yml
containers/: jupiter.def  jureca.def  leonardo.def  lumi.def  slurm-ci.def  snellius.def
docs/: CONTAINERS.md  LEONARDO.md  TASKS.md  VENV.md
oellm/: __init__.py  config.py  constants.py  envcheck.py  main.py  registry.py  results.py  runner.py  scheduler.py  task_groups.py  utils.py
oellm/contrib/: CONTRIBUTING.md  README.md  __init__.py  dispatch.py
oellm/contrib/audiobench/: README.md  adapter.py  suite.py  task.py
oellm/contrib/region_reasoner/: README.md  __init__.py  adapter.py  metrics.py  suite.py  task.py
oellm/contrib/regiondial_bench/: README.md  __init__.py  adapter.py  metrics.py  suite.py  task.py
oellm/core/: __init__.py  base_metric.py  base_model_adapter.py  base_task.py
oellm/resources/: clusters.yaml  task-groups.yaml  template.sbatch
oellm/resources/custom_lm_eval_tasks/: jeopardy.yaml
oellm/resources/custom_lm_eval_tasks/global_mgsm/: _global_mgsm_template_yaml  global_mgsm_ca.yaml  global_mgsm_cs.yaml  global_mgsm_de.yaml  global_mgsm_el.yaml  global_mgsm_en.yaml  global_mgsm_es.yaml  global_mgsm_eu.yaml  global_mgsm_fr.yaml  global_mgsm_gl.yaml  global_mgsm_hu.yaml  global_mgsm_sr.yaml
oellm/resources/custom_lm_eval_tasks/global_piqa/prompted/: _template
oellm/resources/custom_lm_eval_tasks/opensubtitles_multi40/: _opensubtitles_multi40_common.yaml  utils.py
oellm/resources/custom_lm_eval_tasks/opensubtitles_multi40/pairs/: bg_to_en.yaml  cs_to_en.yaml  da_to_en.yaml  de_to_en.yaml  el_to_en.yaml  en_to_bg.yaml  en_to_cs.yaml  en_to_da.yaml  en_to_de.yaml  en_to_el.yaml  en_to_es.yaml  en_to_et.yaml  en_to_fi.yaml  en_to_fr.yaml  en_to_hr.yaml  en_to_hu.yaml  en_to_it.yaml  en_to_lt.yaml  en_to_lv.yaml  en_to_nl.yaml  en_to_no.yaml  en_to_pl.yaml  en_to_pt.yaml  en_to_ro.yaml  en_to_sk.yaml  en_to_sl.yaml  en_to_sr.yaml  en_to_sv.yaml  en_to_tr.yaml  en_to_uk.yaml  es_to_en.yaml  et_to_en.yaml  fi_to_en.yaml  fr_to_en.yaml  hr_to_en.yaml  hu_to_en.yaml  it_to_en.yaml  lt_to_en.yaml  lv_to_en.yaml  nl_to_en.yaml  (+10 more)
oellm/resources/custom_lm_eval_tasks/polymath/: _default_template_yaml  polymath_de_high.yaml  polymath_de_low.yaml  polymath_de_medium.yaml  polymath_de_top.yaml  polymath_en_high.yaml  polymath_en_low.yaml  polymath_en_medium.yaml  polymath_en_top.yaml  polymath_es_high.yaml  polymath_es_low.yaml  polymath_es_medium.yaml  polymath_es_top.yaml  polymath_eval.py  polymath_fr_high.yaml  polymath_fr_low.yaml  polymath_fr_medium.yaml  polymath_fr_top.yaml  polymath_it_high.yaml  polymath_it_low.yaml  polymath_it_medium.yaml  polymath_it_top.yaml  polymath_pt_high.yaml  polymath_pt_low.yaml  polymath_pt_medium.yaml  polymath_pt_top.yaml  utils.py
oellm/resources/custom_lm_eval_tasks/sib200/: _default_template_yaml
oellm/resources/custom_lm_eval_tasks/tabfact/: tabfact.yaml  utils.py
oellm/resources/custom_lm_eval_tasks/timeseriesexam/: timeseriesexam.yaml  utils.py
oellm/resources/custom_lm_eval_tasks/xcsqa/: _default_template_yaml  xcsqa_deu_Latn.yaml  xcsqa_eng_Latn.yaml  xcsqa_fra_Latn.yaml  xcsqa_ita_Latn.yaml  xcsqa_nld_Latn.yaml  xcsqa_pol_Latn.yaml  xcsqa_por_Latn.yaml  xcsqa_spa_Latn.yaml
scripts/: pivot_results.py
tests/: test_audio_task_groups.py  test_audiobench.py  test_base_interfaces.py  test_collect_results.py  test_collection_and_scheduling.py  test_compare.py  test_envcheck.py  test_eval_command.py  test_eval_config.py  test_image_task_groups.py  test_judge_preflight.py  test_language_groups.py  test_list_tasks.py  test_metric_snapshots.py  test_part1_fixes.py  test_plugin_protocol.py  test_quantization_and_timeout.py  test_region_reasoner.py  test_regiondial_bench.py  test_registry.py  test_reporter.py  test_runner.py  test_schedule_evals.py  test_task_groups.py  test_task_suite_map.py  test_utils.py  test_video_task_groups.py
tests/integration/: test_slurm.py
