[project]
name = "oellm"
version = "0.1.0"
description = "OpenEuroLLM CLI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas",
    "typer",
    "datasets<4.0.0",
    "rich",
    "huggingface_hub",
    "pyyaml",
    "ijson",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-timeout>=2.3.1",
    "pre-commit",
]
image = [
    "lmms-eval @ git+https://github.com/EvolvingLMMs-Lab/lmms-eval.git",
]
video = [
    "lmms-eval @ git+https://github.com/EvolvingLMMs-Lab/lmms-eval.git",
]
# HPC Singularity image must also include ffmpeg for non-WAV decode.
audio = [
    "lmms-eval @ git+https://github.com/EvolvingLMMs-Lab/lmms-eval.git",
    "soundfile",
    "librosa",
    "jiwer",
]
# AudioBench contrib plugin.  AudioBench itself is NOT pip-installable (no
# build backend upstream and bare imports like ``from dataset import ...``
# that break after install), so we don't list it as a Python dependency.
# Instead, AUDIOBENCH_DIR in clusters.yaml points at a local git clone and
# suite.py subprocesses into ``python src/main_evaluate.py``.  What we do
# need here is our own post-processing / scorer deps for result parsing.
audiobench = [
    "jiwer",         # Phase 1 — WER result sanity checks
    "sacrebleu",     # Phase 1 — BLEU scorer verification (covost2)
    "pythainlp",     # Phase 1 — Thai tokenisation for gigaspeech2_thai
    "evaluate",      # Phase 1 — MMAU / METEOR post-processing
    "soundfile",
    "librosa",
]

[project.scripts]
oellm = "oellm.main:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "oellm"
module-root = ""
include = ["oellm/resources/*", "oellm/resources/**/*"]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["oellm"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
