[project]
name = "oellm-eval"
version = "0.2.0"
description = "OpenEuroLLM CLI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas",
    "typer",
    "datasets<4.0.0",
    "rich",
    "huggingface_hub",
    "pyyaml",
    "ijson",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-timeout>=2.3.1",
    "pre-commit",
]
# Text-evaluation engine base (lm-eval-harness + dependencies).  Pair with
# ``image`` / ``audio`` for a "general" venv that runs text + multimodal
# tasks side-by-side.  ``lighteval`` cannot share a venv with lm-eval
# (datasets <4 vs >=4 conflict) and is installed separately via
# ``uv tool install`` — see docs/VENV.md.
text = [
    "lm-eval",
    "torch",
    "transformers",
    "accelerate",
]
# NOTE: lmms-eval is NOT a pip dep — its wheel drops `_default_template_yaml`
# files. Install it editable (`uv pip install -e "git+…"`); see docs/VENV.md.
image = [
    # transformers 4.50+ fast llava_onevision processor crashes on images=[].
    "transformers>=4.45,<4.50",
    # Phi-4-multimodal trust_remote_code modeling imports backoff.
    "backoff",
    # lmms-eval's qwen2_vl / qwen2_5_vl adapters do a top-level `import decord`
    # (it lives only in lmms-eval's optional `video-legacy` extra), so it must be
    # present for ANY Qwen-VL run — image tasks included. Mirrors lmms-eval's own
    # platform markers; no usable macOS wheel on Python >= 3.12.
    "decord; platform_system != 'Darwin'",
    "eva-decord; platform_system == 'Darwin' and python_version < '3.12'",
]
video = [
    "transformers>=4.45,<4.50",
    "backoff",
    # PyAV 14 renamed AVError to OSError; torchvision still uses the old name.
    "av<14",
    # lmms-eval video adapters (qwen2_vl etc.) import decord at module load.
    "decord; platform_system != 'Darwin'",
    "eva-decord; platform_system == 'Darwin' and python_version < '3.12'",
]
# HPC Singularity image must also include ffmpeg for non-WAV decode.
audio = [
    "soundfile",
    "librosa",
    "numba>=0.61",
    "llvmlite>=0.44",
    "jiwer",
]
# AudioBench contrib plugin.  AudioBench itself is not pip-installable
# (no build backend upstream, bare imports), so AUDIOBENCH_DIR in
# clusters.yaml points at a local git clone and suite.py subprocesses into
# ``python src/main_evaluate.py``.  These are our post-processing deps.
audiobench = [
    "jiwer<3",                     # AudioBench uses jiwer.compute_measures, removed in 3.0
    "transformers>=4.45,<5",       # AudioBench's Qwen2-Audio loader uses the v4 processor API (`audios=` kwarg); v5 silently drops audio inputs and produces garbage predictions
    "sacrebleu",                   # BLEU verification (covost2)
    "pythainlp",                   # Thai tokenisation for gigaspeech2_thai
    "evaluate",                    # MMAU / METEOR post-processing
    "soundfile",
    "librosa",
]
# Evalchemy reasoning suite — uses a forked lm-eval that cannot coexist
# with mainline lm-eval (different fork at the same import path).  Install
# in its own venv: ``uv pip install '.[evalchemy]'``.  Pinned versions are
# what evalchemy upstream requires; see docs/VENV.md.
evalchemy = [
    # Pinned to the tip of the etashg/tokenize_fix branch as of 2026-07-03 —
    # a mutable branch ref made evaluated engine code drift over time.
    "lm-eval @ git+https://github.com/EtashGuha/lm-evaluation-harness@4071e1823bc1d05d1b394e03925b436a46de637e",
    "scipy==1.17.0",
    "datasets==3.6.0",
    "transformers==4.57.6",
    "accelerate==1.12.0",
    "bespokelabs-curator==0.1.26",
    "sqlalchemy",
    "torch",
    "langdetect",
    "immutabledict",
    "fire",  # CLI dep of the HumanEval/AIME/AMC evalchemy benchmarks
]
# DCLM-core-22 — pins ``lm-eval==0.4.9.2`` because v0.4.10+ breaks
# ``agieval_lsat_ar`` few-shot.  Install in its own venv:
# ``uv pip install '.[dclm]'``.
dclm = [
    "lm-eval==0.4.9.2",
    "torch",
    "transformers>=4.43.2,<5.0.0",
    "accelerate",
    "wandb",
    "sentencepiece",
    "tiktoken",
]

[project.scripts]
oellm-eval = "oellm.main:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "oellm"
module-root = ""
include = ["oellm/resources/*", "oellm/resources/**/*"]

# Conflict groups: extras with incompatible pins (must live in separate
# venvs). text/image/video can coexist; evalchemy/dclm cannot share with
# anything pinning a different lm-eval or transformers version. See docs/VENV.md.
[tool.uv]
conflicts = [
    [
        { extra = "text" },
        { extra = "evalchemy" },
        { extra = "dclm" },
    ],
    [
        { extra = "image" },
        { extra = "evalchemy" },
    ],
    [
        { extra = "video" },
        { extra = "evalchemy" },
    ],
]

[tool.ruff]
line-length = 90
target-version = "py312"
# Vendored verbatim from QwenLM/PolyMath (eval/scripts.py); keep it byte-for-byte
# rather than reflowing/relinting upstream code.
extend-exclude = ["oellm/resources/custom_lm_eval_tasks/polymath/polymath_eval.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["oellm"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
